[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asyncraft"
version = "0.0.1"
authors = [
  { name="Kilian Müller", email="kilian@mueller.ai"},
]
description = "Asyncraft is a versatile library tailored for handling asynchronous and synchronous event/message broadcasting across distributed queues, with comprehensive support for callbacks and extensible integration capabilities."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Morxos/asyncraft"
Issues = "https://github.com/Morxos/asyncraft/issues"